# multiscale-beep-modeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/multiscale_beep_encoder/cli/: run_inference.py  run_preprocessor.py  run_split.py  run_training.py
src/multiscale_beep_encoder/data/dataset/: beep.py
src/multiscale_beep_encoder/data/preprocessing/: beep_preprocessor.py  split.py
src/multiscale_beep_encoder/loss/: ntl.py
src/multiscale_beep_encoder/modeling/registry/: embedding_aggregation_registry.py
src/multiscale_beep_encoder/scripts/: create_embeddings.sh
src/multiscale_beep_encoder/utils/: model_wrapper.py
tests/: test_beep.py  test_beep_preprocessing.py  test_run_inference.py  test_wrapper.py
tests/data/beep/preprocessed/: b2c11.csv  b2c4.csv
tests/data/beep/raw/: example_raw_data.csv
